[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "open_supply_hub"
description = "convert json to csv"
authors = [
    {name = "Modhurita Mitra", email = "m.mitra@uu.nl"},
    {name = "Parisa Zahedi", email = "p.zahedi@uu.nl"},
    {name = "Javier Garcia Bernardo", email = "j.garciabernardo@uu.nl"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    # "numpy ~= 1.23.4",
    # "scikit-learn ~= 0.19.1",
]

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]

[tool.flake8]
max-line-length = 99
